--- a/cv.html
+++ b/cv.html
@@ -13,7 +13,7 @@
   <meta name="author" content="Philipp Jauss">
   <title>Philipp Jauss CV</title>
 
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/foundation.min.css">
   <link rel="stylesheet" href="customcss/site.css" />
   
