--- a/kontakt.html
+++ b/kontakt.html
@@ -15,7 +15,7 @@
   
   <title>Philipp Jauss Kontakt</title>
 
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/foundation.min.css">
   <link rel="stylesheet" href="customcss/site.css" />
   
