--- a/uebermich.html
+++ b/uebermich.html
@@ -12,7 +12,7 @@
   <meta name="author" content="Philipp Jauss"> 
   <title>Philipp Jauss Über mich</title>
 
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/foundation.min.css">
   <link rel="stylesheet" href="customcss/site.css" />
   
