--- a/cv.html
+++ b/cv.html
@@ -106,7 +106,7 @@
                 <div class="row mainContent"> 
                     <div class="large-9 large-offset-3 medium-10 medium-offset-2 columns">
                         <p>
-                        Für mich ist es wichtig, in Zukunft mit gängigen Technologien wie beispielsweise Java, C#,.NET, PHP, HTML,CSS zu arbeiten, die eine weite Verbreitung haben. Die „Job-Satisfaction“ ist einfach viel grösser, wenn man nahe „am Puls der Zeit“ arbeitet, was die eingesetzten Technologien betrifft.
+                        Für mich ist es wichtig, Lösungen zu entwickeln, an denen der Benutzer Freude hat, Teil eines grossen ganzen zu sein. Dabei behalte ich steht's den Fokus auf das Wesentliche und denke ihn Lösungen und nicht in Problemen. Teamwork ist mir dabei besonders wichtig, weil man sich gegenseitig unterstützen kann.
                         </p>
                     </div>                
                 </div>               
