--- a/cv.html
+++ b/cv.html
@@ -106,7 +106,7 @@
                 <div class="row mainContent"> 
                     <div class="large-9 large-offset-3 medium-10 medium-offset-2 columns">
                         <p>
-                        Für mich ist es wichtig, Lösungen zu entwickeln, an denen der Benutzer Freude hat, Teil eines grossen ganzen zu sein. Dabei behalte ich steht's den Fokus auf das Wesentliche und denke in Lösungen und nicht in Problemen. Teamwork ist mir dabei besonders wichtig, weil man Erfahrungen austauschen und sich gegenseitig unterstützen kann.
+                        Für mich ist es wichtig, Lösungen zu entwickeln, an denen der Benutzer Freude hat, Teil eines grossen ganzen zu sein. Dabei behalte ich stehts den Fokus auf das Wesentliche und denke in Lösungen und nicht in Problemen. Teamwork ist mir dabei besonders wichtig, weil man Erfahrungen austauschen und sich gegenseitig unterstützen kann.
                         </p>
                     </div>                
                 </div>               
