--- a/cv.html
+++ b/cv.html
@@ -25,6 +25,7 @@
             wf.async = true;
             s.parentNode.insertBefore(wf, s);
         })(document);
+
     </script>
     <script>
         (function (i, s, o, g, r, a, m) {
@@ -41,6 +42,7 @@
 
         ga('create', 'UA-13077377-4', 'gate107.com');
         ga('send', 'pageview');
+
     </script>
 </head>
 
@@ -53,11 +55,22 @@
                     <section>
                         <a id="menu-toggle" class="anchor-link" href="#">Menu</a>
                         <ul id="meinMenu" class="flexmenu simple-toggle">
-                            <li class="name"><a href="./index.html">Philipp <br> Jauss</a></li>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./uebermich.html">Ich</a></li>
-                            <li class="active"><a href="./cv.html">CV</a></li>
-                            <li><a href="./kontakt.html">Kontakt</a></li>
+                            <li class="name">
+                                <a href="./index.html">Philipp
+                                    <br> Jauss</a>
+                            </li>
+                            <li>
+                                <a href="./index.html">Home</a>
+                            </li>
+                            <li>
+                                <a href="./uebermich.html">Ich</a>
+                            </li>
+                            <li class="active">
+                                <a href="./cv.html">CV</a>
+                            </li>
+                            <li>
+                                <a href="./kontakt.html">Kontakt</a>
+                            </li>
                         </ul>
                     </section>
                 </nav>
@@ -73,8 +86,13 @@
                     </div>
                     <div class="large-8 medium-8 small-6 columns">
                         <h1>CV</h1>
-                        <p>Philipp Jauss<br> Kantonsstr. 153<br> 8807 Freienbach<br> philipp@jauss.name
-                            <br> 079 413 1713<br><br> Ledig, geb. 12.10.1973, Schweiz</p>
+                        <p>Philipp Jauss
+                            <br> Kantonsstr. 153
+                            <br> 8807 Freienbach
+                            <br> philipp@jauss.name
+                            <br> 079 413 1713
+                            <br>
+                            <br> Ledig, geb. 12.10.1973, Schweiz</p>
                     </div>
                 </div>
                 <div id="letzteAnstellungAusbildung">
@@ -85,10 +103,10 @@
                     </div>
                     <div class="row mainContent">
                         <div class="large-3 medium-2 columns">
-                            <p>2008-2013</p>
+                            <p>2015 - heute</p>
                         </div>
                         <div class="large-9 medium-10 columns">
-                            <p>Applikationsentwickler / 3rd-lvl Supporter dezentral, Credit Suisse</p>
+                            <p>Developer (fullstack), siroop.ch</p>
                         </div>
                     </div>
                     <div class="row mainContent">
@@ -127,6 +145,37 @@
                     </div>
                     <div class="row mainContent">
                         <div class="large-3 medium-2 columns">
+                            <p>11.2015 - heute</p>
+                        </div>
+                        <div class="large-9 medium-10 columns">
+                            <p>Developer (fullstack), siroop.ch, Zürich</p>
+
+                            <ul>
+                                <li>Agile und Scrum basierte Mitarbeit an übergeordneten Themen wie
+                                    <p>- MVC, MVVM
+                                        <br> - Microservice-Architektur (RESTbasiert)
+                                    </p>
+                                </li>
+                                <li>Frontendentwicklung (Implementation/Maintenance/Optimierung)
+                                    <p>- CSS (native, SASS, BEM, Atomic Design, ITCSS
+                                        <br> - HTML5 (native, responsive mobile first,  incl. TWIG und JINJA2 Templating)
+                                        <br> - Javascript (ES5)
+                                        <br> - Tools: (Git, node, npm, gulp, docker, webpack)
+                                        <br>
+                                    </p>
+                                </li>
+                                <li>
+                                    Backendentwicklung (Implementation/Maintenance Spryker-shop framework, eigener Shop, Wordpress)
+                                    <p>- PHP, python
+                                        <br> - Redis, MySQL
+                                        <br> - wordpress (ACF und siroop plugin)</p>
+                                </li>
+                                <li>Anwendung von agile und scrum </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row mainContent">
+                        <div class="large-3 medium-2 columns">
                             <p>08.2008 - 07.2013</p>
                         </div>
                         <div class="large-9 medium-10 columns">
@@ -135,7 +184,8 @@
                                 <li>Applikationsentwicklung im dezentralen Umfeld des Wertschriftenliefergeschäftes (Windev,
                                     CGI, HTML/CSS, MySQL, Javascript, C++, CORBA)</li>
                                 <li>Applikationsentwicklung im Classic-Umfeld des Wertschriftenliefergeschäftes (PL/I, IMS, DB2,
-                                    MQ)</li>
+                                    MQ)
+                                </li>
                                 <li>Verantwortung für Betrieb und Unterhalt (inkl. 3rd-Level Support) einer eingekauften Software
                                     (FINACE) auf Solaris im Bereich SLB.</li>
                             </ul>
@@ -150,8 +200,10 @@
                             <ul>
                                 <li>Weiterentwicklung und Unterhalt der Applikationsteile Buchungslogik, Spesenaufbereitung,
                                     Legal Reporting, Garantien und Geldwäscherei in der Gesamtbankenlösung DIALBA 2000 (Powerflex,
-                                    Delphi)</li>
-                                <li>Review von Software-Anforderungsdokumenten und Schätzen von Aufwendungen</li>
+                                    Delphi)
+                                </li>
+                                <li>Review von Software-Anforderungsdokumenten und Schätzen von Aufwendungen
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -200,7 +252,8 @@
                             <p>Applikationsentwickler, Credit Suisse Privat Banking, Zürich</p>
                             <ul>
                                 <li>Applikationsentwicklung im Classic-Umfeld des Wertschriftenliefergeschäftes (PL/I, IMS, DB2,
-                                    MQ-Series)</li>
+                                    MQ-Series)
+                                </li>
                                 <li>Mitarbeit bei Konzeption, Design und Planung eines Message orientierten Middlewareintegrationsproduktes
                                     (IBM MQ Series Integrator) </li>
                                 <li>Test und Wartung einer message- und prozessorientierten Produktionsworkflowengine auf dem
@@ -228,7 +281,8 @@
                             <p>Applikationsentwickler, COMSOF / Bank von Ernst, Zürich</p>
                             <ul>
                                 <li>Entwicklung von AS/400 Applikationen mittels RPG/400 (unter anderem Anbindung von SECOM via
-                                    PC-Interface)</li>
+                                    PC-Interface)
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -274,7 +328,8 @@
                         </div>
                         <div class="large-9 medium-10 columns">
                             <p>Umschulung PL1</p>
-                            <p>Umschulung zum PL1 Hostsoftwareentwickler bei der Credit Suisse Private Banking</p>
+                            <p>Umschulung zum PL1 Hostsoftwareentwickler bei der Credit Suisse Private Banking
+                            </p>
                         </div>
                     </div>
                     <div class="row mainContent">
@@ -284,7 +339,8 @@
                         <div class="large-9 medium-10 columns">
                             <p>Wirftschaftsinformatiker mit eidg. Fachausweis</p>
                             <p>2 jähriges, berufsbegleitende Ausbildung zum Wirtschaftsinformatiker mit eidg. Fachausweis am
-                                KV Zürich mit Abschlussprüfung im 1997</p>
+                                KV Zürich mit Abschlussprüfung im 1997
+                            </p>
                         </div>
                     </div>
                     <div class="row mainContent">
@@ -373,7 +429,9 @@
                     <div class="row mainContent">
                         <!--cyberdines.ch-->
                         <div class="large-3 medium-2 columns">
-                            <a href="http://www.philippjauss.gate107.com/cv.pdf"><img class="snlogo" src="img/PDF-Icon.png" alt="Link zum CV als PDF"></a>
+                            <a href="http://www.philippjauss.gate107.com/cv.pdf">
+                                <img class="snlogo" src="img/PDF-Icon.png" alt="Link zum CV als PDF">
+                            </a>
                         </div>
                         <div class="large-9 medium-10 columns">
                             <p>Der ganze CV selbstverständlich auch als PDF.</p>
@@ -391,6 +449,7 @@
         <script src="customjs/site.js"></script>
         <script>
             $(document).foundation();
+
         </script>
     </div>
 </body>
