--- a/cv.html
+++ b/cv.html
@@ -166,7 +166,7 @@
                                 </li>
                                 <li>
                                     Backendentwicklung (Implementation/Maintenance Spryker-shop framework, eigener Shop, Wordpress)
-                                    <p>- PHP, python
+                                    <p>- PHP, python/django/flask
                                         <br> - Redis, MySQL
                                         <br> - wordpress (ACF und siroop plugin)</p>
                                 </li>
