update before major css refactoring

--- a/cv.html
+++ b/cv.html
@@ -151,17 +151,14 @@
                             <p>Developer (fullstack), siroop.ch, Zürich</p>
 
                             <ul>
-                                <li>Agile und Scrum basierte Mitarbeit an übergeordneten Themen wie
-                                    <p>- MVC, MVVM
-                                        <br> - Microservice-Architektur (RESTbasiert)
-                                    </p>
+                                <li>Agile Front- & Backendentwicklung mit Scrum in Teamübergreifenden grösseren und kleineren
+                                    Projekten, wobei der Schwerpunkt auf der Frontendentwicklung lag.
                                 </li>
                                 <li>Frontendentwicklung (Implementation/Maintenance/Optimierung)
                                     <p>- CSS (native, SASS, BEM, Atomic Design, ITCSS
-                                        <br> - HTML5 (native, responsive mobile first,  incl. TWIG und JINJA2 Templating)
+                                        <br> - HTML5 (native, responsive mobile first, incl. TWIG und JINJA2 Templating)
                                         <br> - Javascript (ES5)
                                         <br> - Tools: (Git, node, npm, gulp, docker, webpack)
-                                        <br>
                                     </p>
                                 </li>
                                 <li>
@@ -169,8 +166,8 @@
                                     <p>- PHP, python/django/flask
                                         <br> - Redis, MySQL
                                         <br> - wordpress (ACF und siroop plugin)</p>
+                                    <br> - RESTbasierte Microservicearchitektur
                                 </li>
-                                <li>Anwendung von agile und scrum </li>
                             </ul>
                         </div>
                     </div>
