Disable webfont for the moment. Do I realy need a custom font?

--- a/app/cv.html
+++ b/app/cv.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Philipp Jauss">
     <title>Philipp Jauss CV</title>
     <link rel="stylesheet" href="css/site.css">
-    <script>
+    <!-- <script>
         WebFontConfig = {
             google: {
                 families: ['Roboto:300,400,500']
@@ -23,7 +23,7 @@
             s.parentNode.insertBefore(wf, s);
         })(document);
 
-    </script>
+    </script> -->
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
