--- a/app/cv.html
+++ b/app/cv.html
@@ -23,7 +23,7 @@
             s.parentNode.insertBefore(wf, s);
         })(document);
 
-    </script> -->
+    </script> 
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -40,7 +40,19 @@
         ga('create', 'UA-13077377-4', 'gate107.com');
         ga('send', 'pageview');
 
+    </script>-->
+    <!-- Google Analytics -->
+    <script>
+        window.ga = window.ga || function () {
+            (ga.q = ga.q || []).push(arguments)
+        };
+        ga.l = +new Date;
+        ga('create', 'UA-13077377-4', 'gate107.com');
+        ga('send', 'pageview');
+
     </script>
+    <script async src="https://www.google-analytics.com/analytics.js"></script>
+    <!-- End Google Analytics -->
 </head>
 
 <body>
@@ -221,7 +233,8 @@
                         <li>Mitarbeit bei Konzeption, Design und Planung eines Message orientierten Middlewareintegrationsproduktes
                             (IBM MQ Series Integrator) </li>
                         <li>Test und Wartung einer message- und prozessorientierten Produktionsworkflowengine auf dem Mainframe
-                            (PL/I,DB2,MQ-Series)</li>
+                            (PL/I,DB2,MQ-Series)
+                        </li>
                     </ul>
                 </div>
 
