Correct job-name

--- a/app/cv.html
+++ b/app/cv.html
@@ -242,7 +242,7 @@
                     <p>07.1994 - 04.1998</p>
                 </div>
                 <div class="contentBodyCell">
-                    <p class="jobNameAndEmployer">Applikationsentwickler, Credit Suisse Privat Banking, Zürich</p>
+                    <p class="jobNameAndEmployer">Systemadministrator, Schneider (EUROPE), Bülach</p>
                     <ul>
                         <li>Systemadministration der Unix-Umgebung (AIX)</li>
                         <li>Mitarbeit bei Systemübergreifenden Projekten</li>
