--- a/app/uebermich.html
+++ b/app/uebermich.html
@@ -70,21 +70,28 @@
                 </div>
                 <div class="contentBodyCell contentBodyCell--keep-column-layout">
                     <h1>Über mich</h1>
-                    <p>
-                        Leidenschaft für perfekten Code ist nicht das Einzige was mich antreibt. Da ist natürlich noch mehr, wie die Faszination
-                        für Technologie im Allgemeinen, die heute gängigen Gadgets wie Smartphones, Tablets, Social Networks
-                        oder kurzum: „the internet of things“. Ich wüsste am liebsten über alles Bescheid, und zwar in jedem
-                        der damit verbundenen Bereiche.
-                    </p>
-                    <p>
-                        Egal ob es darum geht zu wissen, wie genau ein Webserver aufgesetzt wird, wie ein CMS funktioniert, oder was es bedeutet
-                        eine Android-App zu bauen. Es ist diese (schon fast furchtbare) Neugier, die mich Antreibt, um immer
-                        mehr besser über die Dinge in diesem Bereich bescheid zu wissen. Die Möglichkeiten die sich durch
-                        die Verbindung all dieser Technologie ergeben sind einfach endlos.
-                    </p>
+                   
                 </div>
 
-                
+                <div class="contentBodyCell contentBodyCell--add-mobile-top-margin"></div>
+                <div class="contentBodyCell">
+                    <h2>Leidenschaft</h2>
+                </div>
+                <div class="contentBodyCell contentBodyCell--add-mobile-top-margin"></div>
+                <div class="contentBodyCell">
+                        <p>
+                                Leidenschaft für perfekten Code ist nicht das Einzige was mich antreibt. Da ist natürlich noch mehr, wie die Faszination
+                                für Technologie im Allgemeinen, die heute gängigen Gadgets wie Smartphones, Tablets, Social Networks
+                                oder kurzum: „the internet of things“. Ich wüsste am liebsten über alles Bescheid, und zwar in jedem
+                                der damit verbundenen Bereiche.
+                            </p>
+                            <p>
+                                Egal ob es darum geht zu wissen, wie genau ein Webserver aufgesetzt wird, wie ein CMS funktioniert, oder was es bedeutet
+                                eine Android-App zu bauen. Es ist diese (schon fast furchtbare) Neugier, die mich Antreibt, um immer
+                                mehr besser über die Dinge in diesem Bereich bescheid zu wissen. Die Möglichkeiten die sich durch
+                                die Verbindung all dieser Technologie ergeben sind einfach endlos.
+                            </p>
+                </div>
 
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin"></div>
                 <div class="contentBodyCell">
@@ -114,6 +121,8 @@
                         wieder die Ruhe geben, die ich brauche. Schon mein Leben lang hatte ich Katzen und könnte mir nicht
                         vorstellen, ohne sie zu leben.
                     </p>
+                    <br>
+                    <br>
                 </div>
 
             </div>
