Adjust image width and add version string to css link

--- a/app/cv.html
+++ b/app/cv.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Philipp Jauss, CV, Lebenslauf">
     <meta name="author" content="Philipp Jauss">
     <title>Philipp Jauss CV</title>
-    <link rel="stylesheet" href="css/site.css">
+    <link rel="stylesheet" href="css/site.css?v=2.0>
     <!-- <script>
         WebFontConfig = {
             google: {
