--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Philipp Jauss, Homepage">
     <meta name="author" content="Philipp Jauss">
     <title>Philipp Jauss Home</title>
-    <link rel="stylesheet" href="css/site.css" />
+    <link rel="stylesheet" href="css/site.css?v=2.0 />
 </head>
 
 <body>
