--- a/app/uebermich.html
+++ b/app/uebermich.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Philipp Jauss, about, über mich">
     <meta name="author" content="Philipp Jauss">
     <title>Philipp Jauss Über mich</title>
-    <link rel="stylesheet" href="css/site.css" />
+    <link rel="stylesheet" href="css/site.css?v=2.0 />
     <!-- Google Analytics -->
     <script>
         window.ga = window.ga || function () {
