--- a/app/kontakt.html
+++ b/app/kontakt.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Philipp Jauss, email, google plus, twitter, webseite">
     <meta name="author" content="Philipp Jauss">
     <title>Philipp Jauss Kontakt</title>
-    <link rel="stylesheet" href="css/site.css" />
+    <link rel="stylesheet" href="css/site.css?v=2.0 />
     <!-- Google Analytics -->
     <script>
         window.ga = window.ga || function () {
