--- a/app/cv.html
+++ b/app/cv.html
@@ -135,7 +135,7 @@
                             (RESTbasiert) Umgebung mit tools wie git, node, npm, gulp, docker, webpack
                         </li>
                         <li>Frontend (Implementation / Maintenance / Optimierung)
-                            <br>- CSS (native, SASS, BEM, Atomic Design, ITCSS
+                            <br>- CSS (native, SASS, BEM, Atomic Design, ITCSS)
                             <br> - HTML5 (native, responsive mobile first, incl. TWIG und JINJA2 Templating)
                             <br> - Javascript (ES5)
                         </li>
